[project]
name = "github2md"
version = "0.1.0"
description = "Convert GitHub profile data to Markdown for LLM analysis"
readme = "README.md"
license = { text = "GPL-2.0" }
authors = [{ name = "Juan Manuel Daza", email = "juanmanueldaza@gmail.com" }]
requires-python = ">=3.13"
keywords = ["github", "markdown", "export", "profile", "llm", "ai", "developer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = []

[project.scripts]
github2md = "github2md.cli:main"

[project.optional-dependencies]
dev = ["pytest>=9.0", "ruff>=0.9", "pyright>=1.1.408"]

[project.urls]
Homepage = "https://github.com/juanmanueldaza/github2md"
Repository = "https://github.com/juanmanueldaza/github2md"
Issues = "https://github.com/juanmanueldaza/github2md/issues"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github2md"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
